--- a/BlazorBattleApp/Client/_Imports.razor
+++ b/BlazorBattleApp/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazorBattleApp.Client
 @using BlazorBattleApp.Client.Shared
+@using BlazorBattleApp.Client.Services
