--- a/BlazorBattleApp/Client/Shared/AddCurrency.razor
+++ b/BlazorBattleApp/Client/Shared/AddCurrency.razor
@@ -1,11 +1,10 @@
-﻿<button @onclick="IncreaseCurrencyCount" class="btn btn-info"><span class="oi oi-plus"></span></button>
+﻿@inject ICurrencyServices CurrencyService
+
+<button @onclick="IncreaseCurrencyCount" class="btn btn-info"><span class="oi oi-plus"></span></button>
 
 @code {
-    [Parameter]
-    public EventCallback<int> CurrencyAdded { get; set; }
-
-    public async Task IncreaseCurrencyCount()
+    public void IncreaseCurrencyCount()
     {
-        await CurrencyAdded.InvokeAsync(5);
+        CurrencyService.AddCurrency(10);
     }
 }
