--- a/BlazorBattleApp/Client/_Imports.razor
+++ b/BlazorBattleApp/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using BlazorBattleApp.Client
 @using BlazorBattleApp.Client.Shared
 @using BlazorBattleApp.Client.Services
+@using Blazored.Toast
+@using Blazored.Toast.Services
